--- a/Test/category_ulli_triangle.css
+++ b/Test/category_ulli_triangle.css
@@ -1,20 +1,40 @@
-
+/* 위치 속성 지정*/
+#maincontent{
+	top : 300px;
+	left : 300px;
+	position : relative;
+}
 
 /* 너비 속성 지정 시작*/
 
 #categorylist{
-	width : 150px;
+	width : 300px;
 }
 
 #categorylist ul li .category{
-	width:50px;
-}
-#categorybanner{
-	width:150px;
+	width:100px;
 }
 
-/* 너비 속성 지정 끝*/
-			
+#categorylist ul li p {
+	width:300px;
+}	
+
+.categorybanner2{
+	left:-100px;
+}
+.categorybanner3{
+	left:-200px;
+}
+
+.triangle-down {
+	margin-left : 40px;
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-top: 10px solid red;
+	behavior:url(PIE.htc);
+}
+
+/* 너비 속성 지정 끝*/	
 #categorylist ul {
 	float: left;
 	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
@@ -23,6 +43,7 @@
 	list-style: none;
 	position: relative;
 	display: inline-table;
+	behavior:url(PIE.htc);
 }
 #categorylist:after {
 	content: ""; clear: both; display: block;
@@ -32,8 +53,38 @@
 	float: left;
 	text-align: center;
 	padding :0;
-	margin : 0;
+	margin : 0; 
 	position: relative;
+
+}
+
+.categorybannercommon{
+	clear:both;
+	top:7px;
+	position: absolute;
+	height: 300px;
+	border-style :solid;
+	border-width : 1px;
+	border-color :black;
+	z-index:-2;
+	behavior:url(PIE.htc);
+	
+}
+
+
+
+.categorybanner1{
+	background:blue;
+}
+.categorybanner2{
+	opacity:0; /*  for all browser except IE */
+	filter: alpha(opacity=0); /* for IE*/
+	background:green;
+}
+.categorybanner3{
+	opacity:0; /*  for all browser except IE */
+	filter: alpha(opacity=0); /* for IE*/
+	background:yellow;
 }
 
 #categorylist ul li .category{
@@ -41,6 +92,13 @@
 	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
 	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
 	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
+	background: -o-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
+	background: -ms-linear-gradient(top, #efefef 0%, #bbbbbb 100%);/*For IE10*/
+	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#efefef', endColorstr='#bbbbbb');/*For IE7-8-9*/ 
+	/* For Internet Explorer 8 */
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#efefef, endColorstr=#bbbbbb)"
+	height: 1%;/*For IE7*/
+	behavior:url(PIE.htc);
 }
 
 .triangle-down {
@@ -48,16 +106,13 @@
 	filter: alpha(opacity=0); /* for IE*/
 	width:0;
 	height:0;
-	margin-left : 15px;
-	border-left: 10px solid transparent;
-	border-right: 10px solid transparent;
-	border-top: 10px solid red;
 	float: left;
-	z-index=0;
 	position: relative;
+	
+
 }
 					
-#categorybanner
+/* #categorybanner
 {
 	position: absolute;
 	z-index=-1;
@@ -66,12 +121,22 @@
 	border-style :solid;
 	border-width : 1px;
 	border-color :black;
-}
+} */
 
 /* Selector 속성 지정 시작*/
 	/*선택된 li태그의 삼각형만 표시*/
-#categorylist ul li:hover .triangle-down {
+#categorylist ul li:hover .triangle-down{
 	opacity:1; /*  for all browser except IE */
 	filter: alpha(opacity=100); /* for IE*/
 }
+#categorylist ul li:hover .categorybannercommon{
+		z-index:-1;
+	opacity:1; /*  for all browser except IE */
+	filter: alpha(opacity=100); /* for IE*/
+}
+
+#categorylist ul li:hover a{
+	background-color:red;
+}
+
 /* Selector 속성 지정 끝*/
