--- a/Test/category_ulli_triangle.css
+++ b/Test/category_ulli_triangle.css
@@ -13,10 +13,12 @@
 
 #categorylist ul li .category{
 	width:100px;
+		margin:0px;
 }
 
 #categorylist ul li p {
 	width:300px;
+	padding: 0px;
 }	
 
 .categorybanner2{
@@ -27,6 +29,8 @@
 }
 
 .triangle-down {
+	padding: 0px;
+	margin:0px;
 	margin-left : 40px;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
@@ -60,15 +64,16 @@
 
 .categorybannercommon{
 	clear:both;
-	top:7px;
 	position: absolute;
 	height: 300px;
 	border-style :solid;
 	border-width : 1px;
 	border-color :black;
 	z-index:-2;
+	padding: 0px;
+	margin-top : 7px;
 	behavior:url(PIE.htc);
-	
+
 }
 
 
@@ -88,17 +93,7 @@
 }
 
 #categorylist ul li .category{
-	background: #efefef; 
-	background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);  
-	background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%); 
-	background: -webkit-linear-gradient(top, #efefef 0%,#bbbbbb 100%); 
-	background: -o-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
-	background: -ms-linear-gradient(top, #efefef 0%, #bbbbbb 100%);/*For IE10*/
-	filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#efefef', endColorstr='#bbbbbb');/*For IE7-8-9*/ 
-	/* For Internet Explorer 8 */
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#efefef, endColorstr=#bbbbbb)"
-	height: 1%;/*For IE7*/
-	behavior:url(PIE.htc);
+	background-color: gray; 
 }
 
 .triangle-down {
