--- a/Test/category_ulli_triangle.css
+++ b/Test/category_ulli_triangle.css
@@ -1,11 +1,63 @@
+/* CSS Document */
+
+/* Clear all styles */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: 100%;
+    font-family: inherit;
+    vertical-align: baseline;}
+
+/* remember to define focus styles! */
+:focus {
+    outline: 0;}
+
+body {
+    line-height: 1;
+    color: black;
+    background: white;}
+
+ol, ul {
+    list-style: none;}
+
+/* tables still need 'cellspacing="0"' in the markup */
+table{
+    border-collapse: separate;
+    border-spacing: 0;}
+
+caption, th, td {
+    text-align: left;
+    font-weight: normal;}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: "";}
+
+blockquote, q {
+    quotes: "" "";}
+/*Ceal all styles END */
+
 /* 위치 속성 지정*/
 #maincontent{
-	top : 300px;
-	left : 300px;
+	top : 200px;
+	left : 200px;
 	position : relative;
+	padding: 0px;
+	margin:0px;
 }
 
-/* 너비 속성 지정 시작*/
+/* 크기 속성 지정 시작*/
 
 #categorylist{
 	width : 300px;
@@ -13,7 +65,14 @@
 
 #categorylist ul li .category{
 	width:100px;
-		margin:0px;
+	height: 20px;
+}
+
+#categorylist ul li a{
+	width:90px;
+	margin-top:2px;
+	height: 16px;
+	display: inline-block;
 }
 
 #categorylist ul li p {
@@ -21,29 +80,47 @@
 	padding: 0px;
 }	
 
+.categorybanner1{
+	left:0px;
+}
+
 .categorybanner2{
 	left:-100px;
 }
 .categorybanner3{
 	left:-200px;
 }
+.categorybannerproduct1{
+	left:0px;
+}
+.categorybannerproduct2{
+	left:-100px;
+}
+.categorybannerproduct3{
+	left:-200px;
+}
 
 .triangle-down {
-	padding: 0px;
-	margin:0px;
-	margin-left : 40px;
+	left : 40px;
 	border-left: 10px solid transparent;
 	border-right: 10px solid transparent;
-	border-top: 10px solid red;
+	border-top: 10px solid gray;
 	behavior:url(PIE.htc);
 }
 
-/* 너비 속성 지정 끝*/	
+.categorybannercommon{
+	top : 20px;
+}
+.categorybannerproductcommon{
+	top : 170px;
+}
+
+/* 크기 속성 지정 끝*/
+
+
 #categorylist ul {
 	float: left;
 	box-shadow: 0px 0px 9px rgba(0,0,0,0.15);
-	padding :0;
-	margin : 0;
 	list-style: none;
 	position: relative;
 	display: inline-table;
@@ -56,78 +133,109 @@
 #categorylist ul li {
 	float: left;
 	text-align: center;
-	padding :0;
-	margin : 0; 
 	position: relative;
-
-}
-
-.categorybannercommon{
-	clear:both;
-	position: absolute;
-	height: 300px;
-	border-style :solid;
-	border-width : 1px;
-	border-color :black;
-	z-index:-2;
-	padding: 0px;
-	margin-top : 7px;
-	behavior:url(PIE.htc);
-
-}
-
-
-
-.categorybanner1{
-	background:blue;
-}
-.categorybanner2{
-	opacity:0; /*  for all browser except IE */
-	filter: alpha(opacity=0); /* for IE*/
-	background:green;
-}
-.categorybanner3{
-	opacity:0; /*  for all browser except IE */
-	filter: alpha(opacity=0); /* for IE*/
-	background:yellow;
 }
 
 #categorylist ul li .category{
-	background-color: gray; 
+	background-color: gray;
 }
 
 .triangle-down {
+	z-index:0;
 	opacity:0; /*  for all browser except IE */
 	filter: alpha(opacity=0); /* for IE*/
 	width:0;
 	height:0;
 	float: left;
 	position: relative;
-	
-
 }
-					
-/* #categorybanner
-{
+
+/* categorybanner */
+
+.categorybannercommon{
+
 	position: absolute;
-	z-index=-1;
-	margin-top:-10px;
-	padding:0;
-	border-style :solid;
-	border-width : 1px;
-	border-color :black;
-} */
+	height: 150px;
+	padding: 0px;
+	z-index:-2;
+}
+.categorybannerproductcommon{
+
+	clear:both;
+	position: absolute;
+	height: 150px;
+	padding: 0px;
+	z-index:-2;
+}
+.categorybanner1{
+	background:blue;
+	z-index:-1;
+}
+.categorybanner2{
+	background:green;
+}
+.categorybanner3{
+	background:yellow;
+}
+
+.categorybannerproduct1{
+	background:magenta;
+	z-index:-1;
+}
+.categorybannerproduct2{
+
+	background:gray;
+}
+.categorybannerproduct3{
+	background:blue;
+}
+.categorybannerhover{
+
+	z-index:-2;
+}
+
 
 /* Selector 속성 지정 시작*/
 	/*선택된 li태그의 삼각형만 표시*/
 #categorylist ul li:hover .triangle-down{
 	opacity:1; /*  for all browser except IE */
 	filter: alpha(opacity=100); /* for IE*/
+
 }
-#categorylist ul li:hover .categorybannercommon{
-		z-index:-1;
+#categorylist ul li:hover .categorybannerhover{
 	opacity:1; /*  for all browser except IE */
 	filter: alpha(opacity=100); /* for IE*/
+	z-index:-1;
+}
+#categorylist ul li:hover .categorybannercommon{
+	opacity:1; /*  for all browser except IE */
+	filter: alpha(opacity=100); /* for IE*/
+	z-index:-1;
+}
+#categorylist ul li:hover .categorybannerproductcommon{
+	opacity:1; /*  for all browser except IE */
+	filter: alpha(opacity=100); /* for IE*/
+	z-index:-1;
+}
+
+.hoverstyleForCategorybanner
+{
+	opacity:1; /*  for all browser except IE */
+	filter: alpha(opacity=100); /* for IE*/
+	z-index:-1;
+	
+}
+
+.hoverstyleForTriangle-down
+{
+	opacity:1; /*  for all browser except IE */
+	filter: alpha(opacity=100); /* for IE*/
+	z-index:1;
+}
+
+.hoverstyleForA
+{
+	background-color:red;
 }
 
 #categorylist ul li:hover a{
@@ -135,3 +243,5 @@
 }
 
 /* Selector 속성 지정 끝*/
+
+
