IE8에서 자동 전환의 hover 색상적용후 remove클래스적용이안

--- a/Test/category_ulli_triangle.css
+++ b/Test/category_ulli_triangle.css
@@ -238,6 +238,11 @@ blockquote, q {
 	background-color:red;
 }
 
+.hoverRemovestyleForA 
+{
+	background-color:blue;/* IE 8을 위함*/
+}
+
 #categorylist ul li:hover a{
 	background-color:red;
 }
